Bug 420048 - Moving/dragging text to the border creates a new document unexpectedly
Summary: Moving/dragging text to the border creates a new document unexpectedly
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.69.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-04-13 18:59 UTC by Kubuntu@hardwareker.de
Modified: 2020-04-27 15:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.70
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kubuntu@hardwareker.de 2020-04-13 18:59:25 UTC
SUMMARY
Moving/dragging text to a new document shall be configurable/switched off.

When drag and drop text by the mouse, you have to place the text exactly in front of position/column 1. 
Placing the mouse a little bit far to the left and drop you've dropped the text into a new file. 
Expected: even if dropping the text on the left border, paste it in front of column 1.
This feature costs time and nerves. Please find a solution to switch it off in the settings.

Hint: I'm comming from Codewright, whis is still one of the most popular editors in our company. 

STEPS TO REPRODUCE
1. drag text by mouse
2. point the mouse to the left border of the page
3. drop the text. -> a new file is opened but expected is to drop it in the same file

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-04-14 21:36:55 UTC
Yeah.
Comment 2 Christoph Cullmann 2020-04-26 15:06:43 UTC
Git commit 14fef3f921442ad85b524d4678f28976d4334c28 by Christoph Cullmann.
Committed on 26/04/2020 at 15:06.
Pushed by cullmann into branch 'master'.

fix drag'n'drop on left side border widget

we forgot to implement the method that tells
what stuff is accepted

M  +5    -0    src/view/kateviewhelpers.cpp
M  +1    -0    src/view/kateviewhelpers.h

https://commits.kde.org/ktexteditor/14fef3f921442ad85b524d4678f28976d4334c28