fix drag'n'drop on left side border widget

we forgot to implement the method that tells
what stuff is accepted

BUG: 420048